Adiciona css ao portfolio

--- a/index.html
+++ b/index.html
@@ -5,33 +5,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portflólio Web</title>
+    <style>
+        #nome {
+            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+        }
+
+        #descrição {
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        }
+
+        body {
+            background-color: #0A677B;
+        }
+
+        #myself {
+            text-decoration: underline;
+            font-weight: 800;
+        }
+
+        .resiliente {
+            font-size: 40px;
+        }
+
+        .adaptavel {
+            font-size: 30px;
+        }
+
+        .dinâmico {
+            font-size: 40px;
+        }
+
+        .colaborativo {
+            font-size: 50px;
+        }
+
+    </style>
 </head>
 <body>
-    <center><h1 id="nome">Ingo Reichert Junior</h1></center>
+    <h1 id="nome">Ingo Reichert Junior</h1>
     <hr>
     <br>
     <br>
-    <center><img src="Nico.jpeg" id="foto" alt="Nico com seus computadores" width="400px"></center>
+    <img src="Nico.jpeg" id="foto" alt="Nico com seus computadores" width="400px">
     <br>
     <br>
     <br>
     <hr>
     <br>
     <br>
-    <p id="descrição"><em>Me chamam de Nico, sou administrador de empresas, tenho 30 anos, sou de Fraiburgo/SC. Estou iniciando na carreira de dev pela Trybe, acredito que fiz a escolha certa e o meu aprendizado será muito grande.</em></p>
+    <p id="myself">Me chamam de Nico, sou administrador de empresas, tenho 30 anos, sou de Fraiburgo/SC.</p>
+        
+    <p id="descrição">Estou iniciando na carreira de dev pela Trybe, acredito que fiz a escolha certa e o meu aprendizado será muito grande.</p>
     <br>
     <br>
     <hr>
     <br>
         <h2 id="habilidades">Habilidades</h2>
     <ul>
-        <li><h3><strong>Resiliente</strong></h3></li>
+        <li class="resiliente"><h3><strong>Resiliente</strong></h3></li>
         <br>
-        <li><em>Adaptável</em></li>
+        <li class="adaptavel"><em>Adaptável</em></li>
         <br>
-        <li><strong>Dinâmico</strong></li>
+        <li class="dinâmico"><strong>Dinâmico</strong></li>
         <br>
-        <li><em>Colaborativo</em></li>
+        <li class="colaborativo"><em>Colaborativo</em></li>
     </ul>
     <br>
     <hr>
